# avail-core

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build_test.sh  diff-core.txt  rust-toolchain.toml
.github/workflows/: default.yml
block/: Cargo.toml
block/src/: bock.rs  lib.rs  unknown.rs
block/src/data_lookup/: compact.rs  mod.rs
block/src/header/: extension.rs  header.rs  header_runtime.rs  mod.rs
block/src/kate/: v3.rs
core/: Cargo.toml
core/src/: app_extrinsic.rs  asdr.rs  bench_randomness.rs  const_generic_asserts.rs  constants.rs  da_block.rs  data_proof.rs  data_proof_v2.rs  from_substrate.rs  kate_commitment.rs  keccak256.rs  lib.rs  opaque_extrinsic.rs  sha2.rs  traits.rs
core/src/block/: block_runtime.rs  bock.rs  mod.rs  traits_runtime.rs  unknown.rs
core/src/block/header/: extension.rs  header.rs  header_runtime.rs
core/src/data_lookup/: compact.rs  mod.rs  v3.rs  v3_compact.rs  v4.rs  v4_compact.rs
core/src/data_proof/: message.rs
core/src/from_substrate/: digest.rs  mod.rs
core/src/from_substrate/sp_std/: mod.rs
core/src/header/: mod.rs
core/src/header/extension/: mod.rs  v3.rs  v4.rs
core/src/header_version/: mod.rs
core/src/traits/: extended_block.rs  extended_header.rs  get_app_id.rs  get_da_commitments.rs
core/tests/const_generics/: usize_even_fail.stderr  usize_greater_or_eq_fail.stderr  usize_non_zero_fail.stderr  usize_safe_cast_to_u32_fail.stderr
kate/: Cargo.toml
kate/benches/: commitments.rs  grid.rs  kzg.rs  reconstruct.data.json  reconstruct.rs
kate/examples/: multiproof_verification.rs
kate/recovery/: Cargo.toml
kate/recovery/src/: com.rs  commitments.rs  couscous.rs  data.rs  lib.rs  matrix.rs  proof.rs  sparse_slice_read.rs  testnet.rs
kate/src/: com.rs  couscous.rs  extracted_1024.data  g1_g2_1024.txt  g1_g2_4096.txt  lib.rs  metrics.rs  testnet.rs
kate/src/gridgen/: core.rs  mod.rs  utils.rs
kate/src/gridgen/tests/: commitments.rs  formatting.rs  mod.rs  reconstruction.rs
nomad/base/: Cargo.toml
nomad/core/: Cargo.toml
nomad/merkle/: Cargo.toml
nomad/signature/: Cargo.toml
primitives/avail/: Cargo.toml
primitives/avail/src/: asdr.rs  data_proof.rs  kate_commitment.rs  lib.rs  sha2.rs  traits.rs
primitives/avail/src/asdr/: app_unchecked_extrinsic.rs  data_lookup.rs
primitives/avail/src/header/: mod.rs  serde.rs  v1.rs  v_test.rs
primitives/avail/src/header/extension/: mod.rs  v1.rs  v2.rs  v_test.rs
primitives/nomad/merkle/: Cargo.toml
primitives/nomad/merkle/src/: error.rs
primitives/nomad/nomad-base/: Cargo.toml
primitives/nomad/nomad-core/: Cargo.toml
primitives/nomad/nomad-core/src/: nomad_message.rs  typed_message.rs
primitives/nomad/signature/: Cargo.toml
primitives/nomad/signature/src/: signature.rs
primitives/types/: Cargo.toml
primitives/types/src/: lib.rs
substrate/: Cargo.toml
substrate/src/: digest.rs  hex_display.rs  justifications.rs  lib.rs
substrate/src/sp_std/: mod.rs  without_std.rs
