[workspace]
members = [
	"core",
	"kate/recovery",
	"kate",
	"nomad/signature",
	"nomad/core",
	"nomad/base",
	"nomad/merkle",
]
[patch.crates-io]
# Substrate  (polkadot-v0.9.37-patch).
sp-core = { git = "https://github.com/availproject/substrate.git", branch = "polkadot-v0.9.37-patch" }
sp-core-hashing = { git = "https://github.com/availproject/substrate.git", branch = "polkadot-v0.9.37-patch" }
sp-io = { git = "https://github.com/availproject/substrate.git", branch = "polkadot-v0.9.37-patch" }
sp-api = { git = "https://github.com/availproject/substrate.git", branch = "polkadot-v0.9.37-patch" }
sp-std = { git = "https://github.com/availproject/substrate.git", branch = "polkadot-v0.9.37-patch" }
sp-application-crypto = { git = "https://github.com/availproject/substrate.git", branch = "polkadot-v0.9.37-patch" }
sp-storage = { git = "https://github.com/availproject/substrate.git", branch = "polkadot-v0.9.37-patch" }
sp-debug-derive = { git = "https://github.com/availproject/substrate.git", branch = "polkadot-v0.9.37-patch" }
sp-arithmetic = { git = "https://github.com/availproject/substrate.git", branch = "polkadot-v0.9.37-patch" }
sp-runtime = { git = "https://github.com/availproject/substrate.git", branch = "polkadot-v0.9.37-patch" }
sp-trie = { git = "https://github.com/availproject/substrate.git", branch = "polkadot-v0.9.37-patch" }
sp-runtime-interface = { git = "https://github.com/availproject/substrate.git", branch = "polkadot-v0.9.37-patch" }
sp-weights = { git = "https://github.com/availproject/substrate.git", branch = "polkadot-v0.9.37-patch" }
frame-support = { git = "https://github.com/availproject/substrate.git", branch = "polkadot-v0.9.37-patch" }
sp-externalities = { git = "https://github.com/availproject/substrate.git", branch = "polkadot-v0.9.37-patch" }
sp-inherents = { git = "https://github.com/availproject/substrate.git", branch = "polkadot-v0.9.37-patch" }
sp-staking = { git = "https://github.com/availproject/substrate.git", branch = "polkadot-v0.9.37-patch" }
sp-state-machine = { git = "https://github.com/availproject/substrate.git", branch = "polkadot-v0.9.37-patch" }
sp-tracing = { git = "https://github.com/availproject/substrate.git", branch = "polkadot-v0.9.37-patch" }
sp-version = { git = "https://github.com/availproject/substrate.git", branch = "polkadot-v0.9.37-patch" }
sp-wasm-interface = { git = "https://github.com/availproject/substrate.git", branch = "polkadot-v0.9.37-patch" }

[profile.dev.package]
nalgebra = { opt-level = 3 }
blst = { opt-level = 3 }
dusk-bls12_381 = { opt-level = 3 }
dusk-plonk = { opt-level = 3 }
dusk-jubjub = { opt-level = 3 }
dusk-bytes = { opt-level = 3 }
rayon = { opt-level = 3 }
rayon-core = { opt-level = 3 }
poly-multiproof = { opt-level = 3 }
ark-bls12-381 = { opt-level = 3 }
ark-ec = { opt-level = 3 }
ark-ff = { opt-level = 3 }
ark-poly = { opt-level = 3 }
ark-serialize = { opt-level = 3 }
ark-std = { opt-level = 3 }
merlin = { opt-level = 3 }
