[workspace]
members = [
	"primitives/avail",
	"kate",
	"primitives/nomad/signature",
	"primitives/nomad/nomad-core",
	"primitives/nomad/nomad-base",
	"primitives/nomad/merkle",
]
[patch.crates-io]
# Substrate  (polkadot-v0.9.37-patch).
sp-core = { git = "https://github.com/availproject/substrate.git", branch = "polkadot-v0.9.37-patch" }
sp-io = { git = "https://github.com/availproject/substrate.git", branch = "polkadot-v0.9.37-patch" }
sp-std = { git = "https://github.com/availproject/substrate.git", branch = "polkadot-v0.9.37-patch" }
sp-runtime = { git = "https://github.com/availproject/substrate.git", branch = "polkadot-v0.9.37-patch" }
sp-trie = { git = "https://github.com/availproject/substrate.git", branch = "polkadot-v0.9.37-patch" }
sp-runtime-interface = { git = "https://github.com/availproject/substrate.git", branch = "polkadot-v0.9.37-patch" }
sp-weights = { git = "https://github.com/availproject/substrate.git", branch = "polkadot-v0.9.37-patch" }
frame-support = { git = "https://github.com/availproject/substrate.git", branch = "polkadot-v0.9.37-patch" }
