[package]
name = "avail-core"
version = "0.6.2"
authors = []
edition = "2021"
license = "Apache-2.0"

[dependencies]
# Others
hex = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
impl-serde = { workspace = true, optional = true }
derive_more.workspace = true
ethabi-decode.workspace = true
hash256-std-hasher.workspace = true
log.workspace = true
static_assertions.workspace = true
thiserror-no-std.workspace = true
tiny-keccak.workspace = true

# Parity
binary-merkle-tree = { workspace = true, optional = true }
bounded-collections.workspace = true
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true }

frame-support = { workspace = true, optional = true }
sp-runtime = { workspace = true, optional = true }
sp-runtime-interface = { workspace = true, optional = true }
sp-trie = { workspace = true, optional = true }
sp-storage = { workspace = true, optional = true }
sp-debug-derive = { workspace = true, optional = true }
sp-arithmetic.workspace = true
sp-std.workspace = true

blake2b_simd.workspace = true
sha2.workspace = true
sha3.workspace = true
primitive-types.workspace = true
hash-db.workspace = true

[dev-dependencies]
hex-literal.workspace = true
rand.workspace = true
serde_json.workspace = true
test-case.workspace = true
avail-core = { path = ".", features = ["runtime"] }
trybuild = "1.0.96"

[features]
default = [ "std" ]
std = [
	"bounded-collections/std",
	"codec/std",
	"derive_more/display",
	"ethabi-decode/std",
	"hash256-std-hasher/std",
	"hex/std",
	"log/std",
	"scale-info/std",
	"serde?/std",
	"sp-std/std",
	"sp-arithmetic/std",
	"frame-support?/std",
	"binary-merkle-tree?/std",
	"sp-runtime-interface?/std",
	"sp-runtime?/std",
	"sp-trie?/std",
	"primitive-types/std",
]

runtime = [
	"frame-support",
	"sp-runtime",
	"sp-runtime-interface",
	"sp-trie",
	"sp-storage",
	"sp-debug-derive",
	"binary-merkle-tree",
	"serde",
]

try-runtime = [ "runtime", "sp-runtime/try-runtime" ]

serde = [ 
	"dep:serde", 
	"hex/serde", 
	"log/serde", 
	"impl-serde", 
	"primitive-types/serde_no_std", # TODO If std is enabled then the `primitive-types/serde` "should" be enabled. Don't want to deal with that rn.
	"bounded-collections/serde"
]