[package]
name = "avail-core"
version = "0.6.2"
authors = []
edition = "2021"
license = "Apache-2.0"

[dependencies]
# Others
hex = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
impl-serde = { workspace = true, optional = true }
derive_more.workspace = true
ethabi-decode.workspace = true
hash256-std-hasher.workspace = true
log.workspace = true
static_assertions.workspace = true
thiserror-no-std.workspace = true
tiny-keccak.workspace = true
num-traits = { workspace = true }

# Parity
binary-merkle-tree = { workspace = true, optional = true }
bounded-collections.workspace = true
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true }

frame-support = { workspace = true, optional = true }
sp-runtime = { workspace = true, optional = true }
sp-runtime-interface = { workspace = true, optional = true }
sp-trie = { workspace = true, optional = true }
sp-storage = { workspace = true, optional = true }
sp-debug-derive = { workspace = true, optional = true }
sp-std.workspace = true

blake2b_simd.workspace = true
sha2.workspace = true
sha3.workspace = true
primitive-types.workspace = true
hash-db.workspace = true

[dev-dependencies]
hex-literal.workspace = true
rand.workspace = true
serde_json.workspace = true
test-case.workspace = true
avail-core = { path = ".", features = ["runtime"] }
trybuild = "1.0.96"

[features]
default = [ "std" ]
std = [
	"binary-merkle-tree?/std",
	"bounded-collections/std",
	"codec/std",
	"derive_more/display",
	"ethabi-decode/std",
	"frame-support?/std",
	"hash256-std-hasher/std",
	"hex/std",
	"log/std",
	"primitive-types/std",
	"scale-info/std",
	"serde?/std",
	"sp-runtime-interface?/std",
	"sp-runtime?/std",
	"sp-std/std",
	"sp-trie?/std",
]

runtime = [
	"binary-merkle-tree",
	"frame-support",
	"serde",
	"sp-debug-derive",
	"sp-runtime",
	"sp-runtime-interface",
	"sp-storage",
	"sp-trie",
]

try-runtime = [ "runtime", "sp-runtime/try-runtime" ]

serde = [
	# TODO If std is enabled then `primitive-types/serde` "should" be enabled. Don't want to deal with that rn.
	"bounded-collections/serde",
	"dep:serde",
	"hex/serde",
	"impl-serde",
	"log/serde",
	"primitive-types/serde_no_std",
]
