[package]
name = "kate"
version = "0.9.2"
authors = ["Denis Ermolin <denis.ermolin@matic.network>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal
avail-core = { path = "../core", default-features = false }
kate-recovery = { path = "recovery", default-features = false }

# Crypto
poly-multiproof = { workspace = true, default-features = false, features = ["blst"] }

# Parity & Substrate
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
sp-std.workspace = true

# 3rd-party
derive_more.workspace = true
static_assertions.workspace = true
thiserror-no-std.workspace = true

hex = { workspace = true }
hex-literal.workspace = true
log = { workspace = true, optional = true }
nalgebra = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
rand_chacha = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
lru = "0.7.1"

[dev-dependencies]
avail-core = { path = "../core", default-features = false, features = ["runtime"] }
criterion.workspace = true
proptest.workspace = true
serde_json.workspace = true
test-case.workspace = true

[features]
default = [ "std" ]
alloc = [ "nalgebra/alloc" ]
parallel = [ "criterion/rayon", "rayon" ]

std = [
	"avail-core/std",
	"codec/std",
	"kate-recovery/std",
	"log",
	"nalgebra/std",
	"once_cell",
	"parallel",
	"poly-multiproof/std",
	"rand/std",
	"rand_chacha/std",
	"serde",
	"serde_json/std",
]

serde = [ "avail-core/serde", "dep:serde" ]

extended-columns = []
maximum-block-size = []

[[bench]]
name = "reconstruct"
harness = false

[[bench]]
name = "commitments"
harness = false
