[package]
name = "kate-recovery"
version = "0.10.0"
authors = ["Denis Ermolin <denis.ermolin@matic.network>"]
edition = "2018"
license = "Apache-2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.15",  default-features = false, features = ["js"], optional = true }
sp-io = { workspace = true, default-features = false, feautes = ["disable_panic_handler"], optional = true }

[dependencies]
# Internals
avail-core = { path = "../../core", default-features = false }
dusk-plonk = { workspace = true }

# Parity
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
sp-arithmetic.workspace = true
sp-std.workspace = true

# 3rd-parties
derive_more.workspace = true
static_assertions.workspace = true
thiserror-no-std.workspace = true

dusk-bytes = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
rand_chacha = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
hex.workspace = true
test-case.workspace = true

[features]
default = [ "std" ]
std = [
	"avail-core/std",
	"dusk-bytes",
	"dusk-plonk/std",
	"once_cell",
	"rand/std",
	"rand_chacha/std",
	"serde",
	"sp-arithmetic/std",
	"sp-std/std",
]
wasmcompatible = ["dep:getrandom", "dep:sp-io"]

serde = [ "dep:serde" ]
