[package]
name = "da-types"
version = "0.4.4"
authors = []
edition = "2018"

[dependencies]
derive_more = "0.99.17"
num-traits = { version = "0.2", default-features = false }
parity-scale-codec = { version = "3", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"] }

serde = { version = "1.0", features = ["derive"], optional = true }
hex = { version = "0.4", optional = true, default-features = false, features = ["alloc", "serde"] }

parity-util-mem = { version = "*", default-features = false, optional = true }
sp-debug-derive = { version = "*", default-features = false, optional = true }
sp-runtime = { version = "*", default-features = false, optional = true }

[dev-dependencies]

[features]
default = ["std"]
std = ["serde", "hex", "parity-scale-codec/std", "scale-info/std", "num-traits/std"]
substrate = ["sp-debug-derive", "parity-util-mem", "sp-runtime"]
