[package]
name = "nomad-base"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
frame-support = { version = "4.0.0-dev", default-features = false }
nomad-core = { path = "../nomad-core", default-features = false }
nomad-signature = { path = "../signature", default-features = false }
# parity-util-mem = { version = "0.12.0", default-features = false, features = ["primitive-types"] }
primitive-types = { version = "0.12", default-features = false, features = ["scale-info", "codec"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }
sp-core = { version = "6.0.0", default-features = false }
sp-io = { version = "6.0.0", default-features = false }
sp-std = { version = "4.0.0", default-features = false }
tiny-keccak = { version = "2.0.2", default-features = false, features = ["keccak"] }

ethers-signers = { version = "1", default-features = false, optional = true }
once_cell = { version = "1.8.0", default-features = false, optional = true }

[features]
default = ["std"]
std = [
	"serde",
	"ethers-signers",
	"once_cell",
	"primitive-types/serde",
	"codec/std",
	"nomad-signature/std",
	"scale-info/std",
	"frame-support/std",
	"nomad-core/std",
	"sp-std/std",
	"sp-core/std",
]
